deployment/atrium.yml
kind: Deployment
apiVersion: apps/v1
metadata:
  name: arb-atrium-data-__NAMESPACE_ENV__
  namespace: __NAMESPACE__
spec:
  replicas: 1
  selector:
    matchLabels:
      app: arb-atrium-data-__NAMESPACE_ENV__
  template:
    metadata:
      creationTimestamp: null
      labels:
        app: arb-atrium-data-__NAMESPACE_ENV__
    spec:
      volumes:
        - name: arb-data
          persistentVolumeClaim:
            claimName: pvc-01-__NAMESPACE__-claim
      containers:
        - name: arb-atrium-data-__NAMESPACE_ENV__
          image: 'registry.forge.grandlyon.com/erasme/script-recalcul-calque/calqul-atrium-__NAMESPACE_ENV__'
          ports:
            - containerPort: 8080
              protocol: TCP
          volumeMounts:
            - name: arb-data
              mountPath: /arb-data/config
              subPath: config
          imagePullPolicy: Always
      restartPolicy: Always
      imagePullSecrets:
        - name: forge-secret
