deployment/db-calqul.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: calqul-db-__NAMESPACE_ENV__
  namespace: __NAMESPACE__
  labels:
    apps: calqul-db-__NAMESPACE_ENV__
spec:
  replicas: 1
  selector:
    matchLabels:
      app: calqul-db-__NAMESPACE_ENV__
      role: primary
      tier: database
  template:
    metadata:
      labels:
        app: calqul-db-__NAMESPACE_ENV__
        role: primary
        tier: database
    spec:
      imagePullSecrets:
        - name: forge-secret
      volumes:
        - name: db-data
          persistentVolumeClaim: 
            claimName: pvc-01-__NAMESPACE__-claim
      containers:
      - name: calqul-db-__NAMESPACE_ENV__
        image: registry.forge.grandlyon.com/erasme/script-recalcul-calque/calqul-db-__NAMESPACE_ENV__
        imagePullPolicy: Always
        ports:
        - containerPort: 5432
          protocol: TCP
        readinessProbe:
          tcpSocket:
            port: 5432
          initialDelaySeconds: 120
          periodSeconds: 10
        livenessProbe:
          tcpSocket:
            port: 5432
          initialDelaySeconds: 15
          periodSeconds: 20
        ressources:
          requests:
            memory: "256M"
            cpu: "200mi"
          limits:
            memory: "512M"
            cpu: "500mi"
        volumeMounts:
          # need a subpath as postgres wants an empty folder (the mounted folder `/var/lib/postgresql/data` has a `lost+found` directory)
          # see https://stackoverflow.com/questions/51168558/how-to-mount-a-postgresql-volume-using-aws-ebs-in-kubernete
          # this is used together with the env var PGDATA = /var/lib/postgresql/data/pgdata (below)
          # the owner:group of this folder is 70:70 (postgres:postgres), done by this step in the docker image:
          # https://github.com/docker-library/postgres/blob/master/Dockerfile-alpine.template#L146
          - name: db-data
            mountPath: "/arb-data/pgdata"
            subpath: pgdata
