deployment/service-calqul.yml
apiVersion: v1
kind: Service
metadata:
  name: calqul-db-service-__NAMESPACE_ENV__
  namespace: __NAMESPACE__
spec:
  selector:
    app: calqul-__NAMESPACE_ENV__
    tier: database
  ports:
    - name: http-5432
      protocol: TCP
      port: 5432
      targetPort: 5432
