deployment/route-atrium.yml
# Main route fo atrium
kind: Route
apiVersion: route.openshift.io/v1
metadata:
  name: main
  namespace: __NAMESPACE__
spec:
  host: "arb-data-atrium-dev.air.grandlyon.fr"
  path: /
  to:
    kind: Service
    name: atrium-svc
    weight: 100
  port:
    targetPort: 8080
  tls:
    termination: edge
    insecureEdgeTerminationPolicy: Redirect
  wildcardPolicy: None
